--- a/av01/index.html
+++ b/av01/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Basil</title>
+    <title>ONG Amigos da Juju</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/id-styles.css">
     <link rel="stylesheet" href="styles/class-styles.css">
     <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌷</text></svg>">
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐾</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -21,10 +21,10 @@
 <body>
 <header>
     <div class="flex-row">
-        <h1>Flores Basil 🌷</h1>
+        <h1>Amigos da Juju 🐾</h1>
         <div class="flex-row" style="gap: 2rem;">
-            <a href="#floricultura">Floricultura</a>
-            <a href="#sobre-mim">Sobre mim</a>
+            <a href="#pets">Pets</a>
+            <a href="#sobre">Sobre</a>
             <a href="#contato">Contato</a>
         </div>
     </div>
@@ -32,73 +32,74 @@
 <main>
     <section id="intro" class="banner">
         <div id="intro-content">
-            <h1>Encante quem você ama com flores</h1>
-            <p>Venha conhecer a melhor floricultura do Brasil 💝</p>
-            <a href="#floricultura" class="button">Saiba mais 🧐</a>
+            <h1>Dê um lar para quem precisa</h1>
+            <p>Conheça pets, tanto pequenos quanto grandes, que precisam de um lugar para morar.</p>
+            <a href="#pets" class="button" draggable="false">Saiba mais 🔎</a>
         </div>
-        <img src="assets/campo_tulipas.jpg" alt="Ana Florida"/>
+        <img src="assets/cesta_gatos.jpg" alt="Ana Florida"/>
     </section>
-    <section id="floricultura" class="banner flex-row">
-        <div id="floricultura-content">
-            <h2>Floricultura</h2>
-            <p>Na nossa floricultura você pode encontrar o melhor do mundo das flores.</p>
-            <p>Aqui você vai encontrar exatamente o que precisa. Uma ocasião especial? Um presente? Flores para sua
-                casa?
-                Pode contar conosco!</p>
+    <section id="pets" class="banner flex-row">
+        <div id="pets-content">
+            <h2>Pets</h2>
+            <p>Nós cuidamos de todos os animais que precisam, sempre procurando uma casa pra eles. Você quer conhecer
+                alguns dos pets que resgatamos?</p>
+            <p>Conheça a Mel, o Tino, o Nagito, e o Café!</p>
         </div>
-        <div id="floricultura-show">
+        <div id="pets-show">
             <div>
-                <img src="assets/flores.jpg" alt="flores" title="FLores" draggable="false"/>
-                <b>Flores</b>
+                <img src="assets/mel.png" alt="flores" title="FLores" draggable="false"/>
+                <b>Mel</b>
             </div>
             <div>
-                <img src="assets/buque.jpg" alt="buque" title="Buquê" draggable="false"/>
-                <b>Buquês</b>
+                <img src="assets/tino%20e%20nagito.jpg" alt="buque" title="Buquê" draggable="false"/>
+                <b>Tino e Nagito</b>
             </div>
             <div>
-                <img src="assets/especial.JPG" alt="eventos especiais" title="Eventos especiais" draggable="false"/>
-                <b>Eventos especiais</b>
+                <img src="assets/cafe.jpg" alt="eventos especiais" title="Eventos especiais" draggable="false"/>
+                <b>Café</b>
             </div>
         </div>
     </section>
-    <section id="sobre-mim" class="banner flex-row">
-        <img src="assets/01.jpg" alt="eu" title="Eu"/>
+    <section id="sobre" class="banner flex-row">
+        <img src="assets/01.jpg" alt="ong" title="ONG" draggable="false"/>
 
-        <div id="sobre-mim-content">
-            <h2>Sobre mim</h2>
-            <p>Sou Ana, apaixonada por flores e pela arte de transmitir sentimentos através delas.</p>
+        <div id="sobre-content">
+            <h2>Sobre a nossa ONG</h2>
+            <p>A ONG <b>Amigos da Juju</b> foi criada pela nossa fundadora Jujuba <i>"Juju"</i>, nascendo de seu amor
+                incondicional pelos animais e de seu desejo de oferecer uma segunda chance para aqueles que foram
+                abandonados, resgatados, ou que precisam de um lar.</p>
             <p>
-                Aqui, cada arranjo é feito com carinho e atenção aos detalhes, garantindo que cada flor conte uma
-                história especial. Seja para presentear alguém querido, decorar um ambiente ou celebrar uma ocasião
-                marcante, minhas criações são feitas para encantar e emocionar.
+                Nossa missão não para no resgate dos animais: promovemos a adoção responsável e realizamos ações
+                educativas para conscientizar a sociedade sobre a importância do respeito e proteção aos animais. Graças
+                à ajuda de voluntários, parceiros e doações, conseguimos transformar histórias de sofrimento em finais
+                felizes.
             </p>
             <p>
-                Acredito que as flores têm o poder de iluminar o dia de qualquer pessoa, e é por isso que escolho cada
-                uma com amor e dedicação. Venha conhecer o meu trabalho e deixe-se envolver pela beleza da natureza em
-                cada pétala!
+                Junte-se a nós! Adote um novo amigo, seja voluntário ou faça uma pequena doação. Com a sua ajuda,
+                conseguiremos fazer a diferença na vida de muitos animais!
             </p>
         </div>
     </section>
     <section id="contato" class="banner">
         <div id="contato-info" class="flex-column">
             <h2>Entre em contato</h2>
-            <p>Estamos abertos de segunda-feira à sexta-feira</p>
-            <p style="margin-bottom: 1rem">Das 08:00 às 11:00 e das 14:00 às 18:00</p>
+            <p>Estamos abertos de segunda-feira à sexta-feira.</p>
+            <p style="margin-bottom: 1rem">🕗 Das 08:00 às 11:00 e das 14:00 às 18:00.</p>
             <p><b>Nosso endereço:</b></p>
-            <p style="margin-bottom: 1rem">Rua Caramelo 1025 - Reino Doce, Terra de Ooo</p>
-            <p><b>Telefone:</b> (49) 0413-0612</p>
+            <p style="margin-bottom: 1rem">📌 Rua Caramelo 1025 - Reino Doce, Terra de Ooo</p>
+            <p><b>☎️ Telefone:</b> (49) 0413-0612</p>
             <div class="grupo-icones">
-                <a>
+                <a draggable="false">
                     <i class="fa-brands fa-square-whatsapp"></i>
                 </a>
-                <a>
-                    <i class="fa-brands fa-square-facebook"></i>
-                </a>
-                <a>
+                <a draggable="false">
                     <i class="fa-brands fa-square-instagram"></i>
                 </a>
-                <a href="">
-                    <i class="fa-brands fa-square-git"></i>
+                <a draggable="false">
+                    <i class="fa-brands fa-square-bluesky"></i>
+                </a>
+                <a target="_blank" href="https://github.com/jwols27/dev-web-unoesc" draggable="false">
+                    <i class="fa-brands fa-square-github"></i>
                 </a>
             </div>
         </div>
